manifests/kagent/resources/service-unifi-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-api
  namespace: kagent
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi-api
  namespace: kagent
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - port: 443
        protocol: TCP
